--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.12.4",
+    "@huggingface/inference": "^2.8.1",
     "@langchain/community": "^0.3.36",
     "@langchain/core": "^0.3.42",
     "@langchain/openai": "^0.4.5",
     "@langchain/pinecone": "^0.2.0",
     "@pinecone-database/pinecone": "^5.1.1",
     "@radix-ui/react-slot": "^1.1.2",
+    "@xenova/transformers": "^2.17.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.4.0",
